--- a/CUT.ipynb
+++ b/CUT.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from .training.train import train\n",
-    "from .data_utils import *\n",
+    "from training.train import train\n",
+    "from data_utils import *\n",
     "import torch\n",
     "import torchvision.transforms as T\n",
     "import matplotlib.pyplot as plt"
@@ -15,42 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define path to image folders\n",
-    "path = None\n",
-    "X_class_name = None\n",
-    "Y_class_name = None"
+    "path = \"./datasets/horse2zebra/\"\n",
+    "X_class_name = \"trainA\"\n",
+    "Y_class_name = \"trainB\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split image folders in path into train val splits\n",
-    "# this creates a folder \"output\" with the following structure:\n",
-    "# path/output/train/X_class_name/...\n",
-    "# path/output/train/Y_class_name/...\n",
-    "# path/output/val/X_class_name/...\n",
-    "# path/output/val/Y_class_name/...\n",
-    "\n",
-    "output_folder = \"output\"\n",
-    "train_val_ratio = (0.8, 0.2)\n",
-    "split_folders(path, output_folder, train_val_ratio)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_to_train = path + output_folder + \"/train\"\n",
-    "batches_by_class = get_batches_from_path(path_to_train)\n",
+    "batches_by_class = get_batches_from_path(path)\n",
     "\n",
     "X_train_dataloader = make_dataloader(batches_by_class, X_class_name)\n",
     "Y_train_dataloader = make_dataloader(batches_by_class, Y_class_name,\n",
@@ -149,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
