--- a/CUT.ipynb
+++ b/CUT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define path to image folders\n",
     "path = \"./datasets/horse2zebra/\"\n",
     "X_class_name = \"trainA\"\n",
-    "Y_class_name = \"trainB\""
+    "Y_class_name = \"trainB\"\n",
+    "\n",
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')"
    ]
   },
   {
@@ -130,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
